--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          file: ./dockerfile.odp1
+          file: ./dockerfile.v1
           push: true
           tags: |
             przemr/projekt2:ghprzemek1
