--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Buildx set-up
         id: buildx
         uses: docker/setup-buildx-action@v1
@@ -25,12 +28,13 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push multi platform images
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./
+          platforms: linux/amd64,linux/arm64,linux/ppc64le
           file: ./Dockerfile
           push: true
           tags: |
-            przemr/projekt2-zad1:ghprzemek1
+            przemr/projekt2-zad2:ghprzemek1
