--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
       - name: Buildx set-up
         id: buildx
         uses: docker/setup-buildx-action@v1
@@ -26,12 +23,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build and push multi platform images
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./
-          platforms: linux/amd64,linux/arm64,linux/ppc64
           file: ./dockerfile.v1
           push: true
           tags: |
